[gd_scene load_steps=15 format=4 uid="uid://ckdom28eyeva7"]

[ext_resource type="Script" uid="uid://tt68vdlbgtwy" path="res://enemy/boss/weapons/weapon_archive/crash_bomb.gd" id="1_7mixq"]
[ext_resource type="Texture2D" uid="uid://ddx5uukb71qbx" path="res://assets/sprites/weapons/mm1/first set_MM2(16x16).png" id="2_awpbd"]
[ext_resource type="Texture2D" uid="uid://nc4em8ct6ceg" path="res://assets/sprites/weapons/mm1/crash_bomb_explosions(16x16).png" id="3_hewch"]
[ext_resource type="AudioStream" uid="uid://c1wy5wxpe2bdv" path="res://assets/sounds/crash_bomber.wav" id="4_4y5te"]

[sub_resource type="AtlasTexture" id="AtlasTexture_btg8q"]
atlas = ExtResource("2_awpbd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_msj7w"]
atlas = ExtResource("2_awpbd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ciqs"]
atlas = ExtResource("2_awpbd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr86q"]
atlas = ExtResource("2_awpbd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2j25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btg8q")
}],
"loop": true,
"name": &"in_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msj7w")
}],
"loop": false,
"name": &"landed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ciqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr86q")
}],
"loop": true,
"name": &"planted",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y88n"]
size = Vector2(10, 12)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_h6qpw"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jks88"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 10.0
emission_ring_radius = 10.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 2.0
anim_speed_max = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8n7b"]
size = Vector2(10, 12)

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_whgf8"]
data = PackedByteArray("SUQzAwAAAAAATlRJVDIAAAAsAAAATWVnYSBNYW4gQ2xhc3NpYyBTb3VuZCBFZmZlY3RzIC0gQ29tcGFyaXNvblRYWFgAAAAOAAAAVFhYWABpc282bXA0Mf/7kGQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFhpbmcAAAAPAAAAGQAALNMADg4OHBwcHCYmJiYyMjIyPDw8PENDQ0NNTU1NVlZWVl9fX19nZ2dnb29vb3d3d3d+fn5+h4eHh4+Pj4+YmJiYpKSkpLe3t7fGxsbG1tbW1uXl5eXv7+/v9/f39/39/f3/////AAAAUExBTUUzLjEwMAS5AAAAAAAAAAA1ICQFrk0AAeAAACzTcCpa4gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/7sEQADMAAAH+AAAAIAAAP8AAAAQXllRRUAQAIzwAizoAAAIxlD/+qNr//Z2k//b/9Po0tGtdbvq329qyt+jzUf6r//////1OtpFutSEpV0CGTtyNoAf/9CBYvLmaGvAB8OCYGzQJnC6DTh9dLCQXFSD4xiYuLCwGJW//cv//b+TAGkDAMNA8HwOHgsJQ8BAkAgAANkAMQGAoL5uAVHA4o7wNULA6avZgNWhAYFe6YGKBAieAPbebk+mmB0lxgFlwGcFfN3QNFgFCA/AQlA1BAG8P/4jcG1gFCAYnAaHiPP7My2TTFzl9JML2FcWR6v7+wsBeFwDgIGbHimOP//b+gxfPIbIJIf+pL//QXUaKMDRlFwqF+QRFcdf////oGn///+GWxVKANgAAkwQAAAA5ckDzP+hFeOALMvpI/+r85v762fs8vRfz/SEiZ/8L/iwNcDFYykotlsNqJVquW2mErnm1bEGlgLGLY2GNIRmD4CnTTTGfjYGFpAo+GEYAmDgBG7ipGSgQAgTTCYIhkCTAsAzxd0+WjAhGY0JIDHUDic3VjM7CwgTJA4BF6oy2jNDBwU3weMvWzXS0wQVRrHgFDyIrEU0go0QGMJEQcFmQGxoiArShsk0j8w5ui7HNlDiGXBRjBYZMMAYcM5FxGAL0TBLaoClgWeM4hpwIOl7gAoMMfDVxbUFMDCwcLr5UyWyjatt1G6NMbd2Hkf+9DDAS74QBmIBQODJWYUDJ8snbAxJiblQe4EMuauqB6aid+mqRu/4QDqGBgA70HS99VB7Sa8BTLBnBdpdspXbDUFMqblK5fuVy+/unp7NOp4ICKJy2U//uwZPWABPyDx25SgAAq4BjZwAAALBHTV7ndogBIgGY7AgABongoDTJX/F1rtAbcv0XVZ7ArEYRKWkceiGoHnvtS9AHJ9X+0mNqk1/PqTkTjVTn////////////////yBv/6EgoDAQAAAAAAAAAAAAAMj+ed8AhCYQ0GxGLDYNRqv5/DEY8RzMOoAxuHjgCAMjEwy+JSIIEw7FgYYMBRhELGDRIYMBheceDwNCQcGQo5UhbkAlE9y9HYFbVWQ/AoV/gcKK61XeWFBw1Bk6EYnkUiRNdtmkOMIY4PHWq6TtMSZc5cnR/a28bJ6JWxgDUIMQDuQ3Bf7IGCR5ejmrniMBRF2IS5K549PuSw+HWINxbHDkDSNsTjvnIr9NYX7GXkZY9kdd+MQLVs0EAfA8CwHD7b0dSLTWMjrwmKsvhLjwGyt7aOHIKsN3dt+XnqQJJ41bvutG33oWtvq/jvyOQzGdeFOhSXoVeo7UKh2LwRK2NxJrcshyeeSDpiGJ2IX7ftZmXDlcuiMvdqG5FajEa+hh/n8///////////////////////////////////7ekU5nCgikUm8b+ggah5SU1BogsXEHMUiWkLMNAYom0l40N/B0gXH8lmJ1kEIbakj+ST5PJZQYyWyWlK2febo2gxA+QrJ5eS7NZUQtZnTXn6caGrf5JJufTON5uai3Uo9kU3tV59x9dHnnOGsKtLZlCKQheXIL3fwdlkH153zLOofNfTphnT7lr7z++FVF6ioOnVkGITW59Jve0yWQHZs0DbXWySmkpaRdMMxNbKhMafQQsuCsKl03NBhOluCbDAmeWSEKb/+5Bk/gAJxoNW7nMAEAAAD/DAAAATxZ9jvYWAKAAANIOAAAQHIqD8bIa1Bopurtx8PHJPxV3Bko3PIE8GTT2Z0/mYN57bGb8XYZbx3e3OkPT+E9xXcvxSlpp5N7zi8LEmsUzWjhqJv41LnO8++tx7qumawPD9/a25Y2Im6w4/Y82jXnza76BF8DF2qHbvNai0zt7/n51//ef21bV6XznFd+vt7e29qqJ4wB8hoDBLIBEZkksxn4WbHPHWPJiQyZjOgEWNfXQubGRjZlwUa0jD1KYQIFYso6YICjgiuhSsGFAhi4gOEoKKOAB2XCqF51kEbM0qmUF+QuJNFTEygaftoi9XXbhEnLSNdBW1MFjqw0QbFDxdFt13MiR8dm2zBgidUZdqPyh9YdhmchTwVIJlUuVipZqDez0SdqV6lMglrrK9d1mtNLXMcFYBsLfNpDkYcWAcIepq0vuQzyBKeDJa/DS4xBEttQDOsGbrAj+WH8p36XLBjtQND96kkPH5lFBB9NafWnvxier1oGg+gjVp+YhBT+uVMb72hiVaXTvaONT/+6Bk0QAFU2jZbWHgCAAADSCgAAEmEg1PWbwAAAAANIMAAABSu/FFLKS3csSCB2yUr2RqSMqZTCJTFpHKaXf/////////////////QWv////////////////96bIpONxBEpEhSCMhYuY2MmGjlyQKkWEDqgoohOzKggwCEsrrbqTh1H8D5rQ8LjJ2YiFCm1x4kibGy2UlB0+niYfoziwztiBHAxLl1vU+mckbb/Je1z7Ucht7+b7eVpevz+3p803pb7pftkzX+pNfx6X2Y5mYn6z97x1/K0fqv+t+3a5HTppPbuTVitfpW9Zoxfaz+51vzc353O6uT+uBo0KhDfcDRBacupgmHHQ10IoIi2zipRZJWIAkApEMJTifukVUSaWO1yWRPLKR1Y5KIGlFuG8cKCWxSvQ8nKWI2SBEHTcgY9UBBRZ6q+4a1TXPKl+MVr0jSZNCCyJPHPwxD7lj7t1YcfGY+z6v9B339kcicpPN/gZmbWMmml3Jp9cwVt9mTPgpWQlkocx5zM//d3/RD+oS2Oi44CiEm3dsK0hUcwGUEJKMwcQnhhjDAYGhcNQlpxYsGirFn4zG4EvOG/TTsV1NilGjN8wg6JpCaAociFxKgIooDgUO0mvBAy2UivCFRVlJXpNtsOYGzJ1Co34otgTJfxk2vSTTCrAvrDMNQrvXNGfarHr1/+FLKLP/+5Bk1oD0+mfY72GACgAADSDgAAESmZ1jrJlXyAAANIAAAAQDJQnHMLjBKDpcYiw8N0KRQxC85CmgecK1YqXVCP3PX/x/tBvkVxVq6pYAS5yS5IlEKty7lrBowFsCaggaEwGqBxlTBcK/A5SzoQkoF45kQGDJZdB9G6+PiIcmireIutH7tFqfpjWSlN2acS0dFvo3SVrbDBqdRk1JO4Y1NvhCyaUPD9sXHY3X6W/mY8PpbtbGWxmuVD778IWkY2VMrl/vNtCTDQSptDS5OQgpy8UjvPzmVrPv/v/PG7mp37Uze0/8wepN30zjSILru25xCmaK4NZTgNOFPQwkIAgUiCyFaF0KTmd5nkDOhHoTD8uf+kabHZ03tSu4M1LxkMjwUfFbGV0YhKzcf5OEwosE54bYq14WAmAnYdZ+JWHCTj+IckdVF/nxZxYrIbUkopbYysCUeIgax/l8mQhXt8NSTwjlKc7S3KFCy7Hosj8LepzEPNYONqisB4ZEOUx8b+JAdrEYA8C4X6+UizGC6u4iDpU4KdlRMYIRYhxyM8IbRqv/+3Bk+wD1KmdZaylE8AAADSAAAAES7Z9nrDDNgAAAP8AAAAS9ZTY2F74hw4V8yWzhaW629K4TMyN1o87IVN0yKZxF9RDq6qAiyESW6ARjWpNMEMDCFzVASeAUbOyENAxJxNeFtKgOOKwvmhUKcBqsMML4uqVQ/Ni4wRSUruvQak09dXPwUNV78EtkOxLHAk0ahKZ/dNxhS09pLShZXIHNvMNJLIwq4dNHS16lV9ziY0k1MzGlXhhiGWmXBJU3sItqrvW8KLk6CGSQ1pQ2Xr979o/GpHqONVXc4pnUTMTrtP5v+Y+S+9a3eWVjIgQJSStMAwDQENDgwwAXp1AIwgEFQJnqJo9KOOvLWduzE4TDzqEnsbYHlCzYgWoHhCgthIbRqMMMKF6LjTKKCNGitNhsneweb2l5B71a//uQZOcA9sNn2msPZPAAAA/wAAABFHGda+ywz4AAAD/AAAAE9wgbZVJpk0jYQKAEe11aTjSWpnTAkgZLUs9lUUlOKym2jreulv95N9lZY9BI0D7SHNg1jF97gcxuf//tSX95v1yteX+46tj/92Z+ZgBf/////////////xJPnOTqHeGczUCCUnNzk0to5ZjOFhlylNgUwRFBxG7JxRFdKPy5X7f94XUcR6Zm+20O/bpqSdkUaps4RZWZyjKOmQG+EEiOoafwNMnU4bZCQmygInMQTPzUxDuT9qLMuubz8RijbBCdULRaCjzNaEYJYyOLSRqllSiKpGQxokKYqDwwCZlUj1Ycyt//O+vR+UzfKXgbAZ/////////////+tyE16al3dCIQASi9wEU6SCHsOBK0ogSQBDaOIyqrA5V1EdTRiD2xuQP5E5WEEOpwWeXbk2Tm07NnWF9WPpVtMFJbN+NEhNGHJbVtQnsmZevBDiibthZGiaUbBTFWdxhSSwkxVEjH+EHQ5GGnUYH4xousR4mzms97RXAjWefypBkCSblk//uQZOeA5PFn23sJNGAQIAohAAAAkh2fb+wYV0A5AGpIAAAATCJS95p6jgzT4Mz//+9/fLv/n77aU/niP//ekAAAz/////////////9ctcRSMymZAAElzlxjU4HbNbBKpkOF5ICYmowhwVvlYIEny19RhrKWAD6hBRqDQyYOXzl5elPkM/+B30O0LTTx+jvaz/9n9nXfazl1b1fLPdvJENSzjKttN1WdSk5y6qNSfp5laJ6WLUaJOPcO4yaplfT4tzJo6iief/B7d15s691bf1biO9jWMhQ6+0IYyj6JEWafpI4dJxq42QpJZO+GEk8JlgI//////////////XDqina3YzASQk5txxAzIbCTPIjBRgtxZRbM1sBogh/Fh6MPgTHAdxGHZqMsnsZ2K3U/3lKWqHq1Vf3UyWsT/3le6telDRIMBrtomD+knpA5IqiUgezeYiPo0spM8gW+IGLnSJAXFFlQZanVOXd7qHkwoB26/9zDq+zv//////////xs7NKv0tS0zWZ5ZcLYg17Js7CITJm7sNsSJ2nd2dXQgBBT//uAZP8A5OhnXPsJNHgOoBqiAAAAFE2fcewxb+A2gGgIAAACn3LvG2i6DEZA4CpQUBymnGcMkFnqAJ5l9GgMaYAnNBL/rbAyBx3vJVyGz2MKLLEYoICY4mldLy9ypZbZHE9jA1g81DoUkl2cag8qdhUGY84TFCeFiBqoqKS7PJCuJlFWupjdKkRVGC44iR8PIwllk9v39C3fTvi9PQydEXYZExOIUFSekoMkUHjjVIGSTA3hUgWnGvAPVciaZmUiAAIOR1so8KBAho0dEMXQx0jXEUGARTKRIFeKai12mvWy1wHdlz9hsAK1vQIVUyRZXCVGF2IkZQimqnp9ZZdZ8NEbdEaNaaqwjSaTSvUzDr3nshVgizRhaMYhSNr6G1qLH5ark5t/aryp/r92/l58wQMWxsMI5medtRuJjbMlLVRZ0b8uXmH4jNzyMpir5yhvQpjC7fd8fvz8p5mHVDMQAAq1UJJOAynIhFqwzQP/+4Bk9YD00mfb+wwzcAAAD/AAAAETzZ9v7CURgAAAP8AAAASuCXBcyVQXUhNYKoQuh+ZWlXFIDdB2QKH0AeeTLwREc2kKMm0yRlUUBETTZbPKJlpkBJaa1OrM9FuX2mjZTiTYSdacoktaY0tpYoYbFRBKDYNqH//zt9//ad97+2GSvMZExbW+19jWuPjzcen1tL92StIw9x5aXZKiTeUaJ/6c/husFZVnZzQxEEJ324RqMzAcAwDLqmtbJjR5jZa4v4EXaQ3ROKXwwmq/sli7MiczISCENmREws0jWtvkPITSBtZpKLUJ3NFikWSabg8s1C832hXsyqXktRqIx0KNR9bKLfCJDhOEDbQbZ2Cj2sgEXH7xrNCD1PIluyL7Cbc3Zd9zXK8z9in8/e05dORRYCAzXsEtDCoDBJFzDw8KhgUo83eBRGgBVQaxBYiwBzNDgOko2NLXOYxEQC8qX8FPtATXI83Y2EGxxAqssv/7cGT9gPTwZ9x7KTRYAAANIAAAARLJiXHsJNDoAAA0gAAABEgETBSbDRglIyCneaT4PVJ1JYLkRCKCGBGuaRsSShLHW3LTQi9h+UTUpvH/v2+S3jzrRVSn3xZ0IFPJdm6Yfv1KL2f+zt4KbZukyTC3mE5zzLw/rL8/flRdftX//tt+Pl40NLMUIxWYi6iDMwEKmctFkGuYRZH81qIBABY6dKgGvT9StWiw5AmnPecttJXI4S28Iv03L8ixq2ZzsFxLbn1oclkRvUFepS8JRo+pMHRFUGiZEo00+cA6SG0JeTKAximLdOdTfFdiCjEEDq/vfBiFqQ+/NYlm5Alkk0jTGzlO7/T2MTXvzVW0+24HBDmMmlkaFl2Wx9lK5XULfT///JIywbQ7uqIpgE6+3an8AuEFQxSt4IT/+4Bk7YD0n1hb+wk0UAAADSAAAAETDZ917CTRYAAANIAAAAQbBAF4sZS94EZmhompytnYM48RZS5DIH1AUCOiMcQ7xPojoq3RHi1vTpG0Poi3XWrkGeZHS115r8ouXPU6GrNq0XP67apGEgdTgRAlLgXhsSQjOh7BYdxgP1EGMx5OSSJ3VLgiOlhuOV1aLu+WX4emdM0PWFQ+JBpKiOHIgPEn8m58CwsVF/wi//////+X1S0Dlol8VlJCAq+R3c3kCrjhYHLEAwcQIGHXM6oWsMW8VlUk8WDBIFkD4RKLBlwfY23aQLA4xDzHeQpykmTpvAOHSRWI8FYCWcErizHd8dw4ftfUGzD6OGvRLs0z+kkVNNm7kqM7HVFmLdIWyjLqPn/+KTkq1tYqh0240okcLpcMgoLCBaaiehtbDcySBn0y3H///xacpc3Y3S0Be6K7wiIYEytSXhHTbQOiHXS6BQElx+S5jQIgI05yC//7cGT7gPTZZ1z7CRZoAAANIAAAARSZn3HsMRHgAAA0gAAABKrgxZlyn2sPA+ru1Jx3o6osTLConETJmYuh81H7FCGl2C9FlWUl0ZuiNtJy8E3OhFefYggWnBW5VKdRjuLRKkqeQurJlFlVVCyI0s3NOMtgx5ve/+b6+/vRqEnTsplJXFkmQ/HlD1bWTLYuTVuk+XvVm4v/+b6WmXvg/Lj8o8UMV+/Xu3ArI7JuAhAJaw5MtUpcgoym44ocIIK+g89uSj8OLIcNkLI4xEXWhCWm62OKY6XZXF4eiIOC7y/vzM3iyx3CcnDzln5cMWRkUnW5cwuTmzxOvGlukFZ2X9qV/eKfYrWiQ2uzk3s6SEJok9LrrEE1Ie7nbUfL3f//++n22idhpttsRoCM2YXbbXUHSs479pKNLRj/+4Bk5gD0xWdc+wlEeAAADSAAAAET7Z9v7CVz4AAANIAAAAR////efWMiZf3dPVrklgJf6yVkhaJV24RVMg2Uh0EYkeENgKBiQ1oMKzFWJdS9HDXo2GXtL+D1EIDlyeDSjyBNVQDhA2SkgoOiG0KkPHKXfAhFE9yE1tV1RwkzVlTa7l6uUuHQZOKKto/nzy9aKFxiXYw004zOLPQ0kRA8cwQ2WlJD41Ry91/zpMipJCyjTDjnEpowwagze6OMeHzG/mv//rqKaK4kyUIkFNWKeRtClxqJPICQSFiQAmXZBwgVVeIBMoaKFBpC/F5Apm7FG7x1t39isC6nrrPXVpYri7LT+wpExb1eDRTUXCleeg3SaXEcXwMWnemDzVS1yV1adx0hgjlO8qsdVbe9bM9PasScZig8aGyKYVeA4POOMYWFVq+a7i1uFmWP3nRbuWRSIX64k1RtcFY+JvsWMQY+Qin/x5VtNs0DTzxk1f/7gGTugPUbZ1vrDExYAAANIAAAARNpn2+sJRGgAAA0gAAABIxKDq7CiWgMQYpLsGSO8C5IGUDpKVAECZ5E0ZCkOCgJdoJ1f1V0MlcZzXTl0Dy2zilZNv5P1K8EjTKGj6EFzkpxlCQuDCEtNoiGG5ynt5i7MYlFjBwqnPFIQRhsfG6RSW9/+PlPwce4DJES7zdTBHo1t+O3//LxGasYWmv60FWYoWluNL//53s3AJYWdJZOtKNM6c1Xz///+fVowy8zvEmksDK4tNEuoGKO7gxIlMfmCUtGEkAgYPMtJCBSsPCrcsVYRmTYZ1EjiinUkjyYWE01ASM5hNIkBwfRGdtnhMUsasJ63PvCes0aSM/f0vHgq+SelK1ktC29t4tp4OJZ3kZezeBqn//3fVImIUPW9YxGtqfEa1//rOca+t3rXdn1I+6zW+O478aP87znVPm+K6hfUaLvP36xYWGLcbUut///6vFlxAfbjXpN//uAZPOA9Q5n2msMRVgAAA0gAAABE92dZawk1UAAADSAAAAEieTVZnekABAAAuBUABAKFiqlIq51jEAFMCCsQls4fXTLYqMDBMwUFQuJTUoaNQLIwAGDBAVJhOw04CIDKZNMOBkCBAyMwzQ4fcCwMFeUDnJTeLfGPEmSMmFQNLLhAoMig50WtmrMgbMCR40CaOsEsaUxuJLmQ8YK2g6JDh4icGlAQEvFhr7qAoCndjUpbiwUtmNIYPbOglQlrpldv8WvL+Ym8tL3ChIJYY3AoNZ7rOOrpk1p9steynTEIzl//Wj4EEBcuLIU1WBxNjYsfBKmao3Vd7DWONxvH+l2u7uW5ii9r5KDa+z92INYOIhIkUVlZu12pLcK0Ev87TSZdF6GrYj0QdWk7+NO/MNxipDrdW2eZE1arryzU8u9xVNoNYW0luLIWQ5va6kh+7DENReYl2P/////////////////6dUq////////////+6Bk94AFXGfZ7WHgAAAADSCgAAEpSg1h+c0EQAAANIMAAAD//////5buAAAIUNABBJKEYcCjdkOoZSlTBVqarLH4pxmCAdAZGSDhtMoZkUHCIpmuiaszDpuYqJGehQQWho2b/yDhJMCEiQVipVlQIYEQCTKj4NCGbGERcdKhA4OXmQEg5MNCXrL/AUBJzhoxxMPBVU5tHxkQQ3QBMySqLqswQCoMNcEYcQCBpiYoQw9bz0wCYAIslkUHwy4TngA8Ag4sBSUTGDmi6QASLMrCRtniCNoTNnWop6hfUgKDyIeFuw6z9ywsipuEA2VKhlS1GRCQh2urtpJRvOZlqXRgQawqtEXwkLM5YzcIAW5RE3qSEVYoOjA6TLZK3sDyWAZ9pV53IqPDVbJFIIxJFqJuNdd+YeFv2GrjhlLtpkm98Y2kI1piS7W9a7DraxSIwLCe0Lsvy0RwewzpkSuS88dcazubbHFlxN2mnapv////////////////9pMg5////////////////71S8ElxOOEoFKNuSSXy/Lc5MiEwsO42HQsxHJw0YFE0dFs2fdAyUS0zyCIOe0wZOsIv00qRcwkCkybF0xoFIyyEwBKWYpOnADpmb4YgagVWDCwwoEHUcwhpMbEAUnAYUCEACAY4OGfA40PGFg4kCGMjqvwIBF70AJEvGCApgQsZGIj/+9Bk74AK/INSbm9AAAAADSDAAAA1Hg1Hud2QAAAANIMAAADygZIQgJDRHBA+DQYxAGAQQXfCoeEEQoAjwmIR8yUlLAwWgVWAIsYeGJ0AISKwBryEpC0EgyrB4nAo2WtWKOipQymCBjJE+RGAJiixmmWFgZUpfFK5yBofEAE/jNUmQMQIShGFkQABhYgAQMEiwiGDxhQaSDhaBVMwIIXMQgaGRaJQAumFwRjAYEJzlqJGgTcdWBBkRgIYCkQUWkQ4lzwILDAmkMhgguks3UWDA4GGghAaKhaDCHjC0EaexdtK9D1D5VgsDCMDaC1ZgfWeJUxpdcukeUUd9ZACBlK5WqMiB0RFxRd0HVrvUxB0nhgiAGaJXFqG4JgslLeMwL/PojQpm+bWRoCS3KoSpZ/////////////////tgl/////////////////+2WKVAAzBYLDoUEqkMped9vNAQgRiIwUMTDwiMJiQhDZl8FmDAOanMJmIYGThwCQSYvAQMERgAKhgjEQbEIYEJiJABer88Gjw9Iv6tYClPK2tjHCl4L2iozJK1magiF6DDMIgIELmKOt1nlCYAbishHEtQWBQ0+ZhCvVUPGHtba1DrKJcuVSEGsiZsxZkiqMvgpWlsUDP22CpEI2+0dUDfRbDSn2XrnDKzofsNGcF24crzszSyeTSVoMOdYhEasC3YW4dx8WoPbMsDnYtArtwmGqR8Yde+WRrB43heF63HhqZlEupJDMqkfp+pxibtYU7/Rlq9h145Kq1G4O4pBT2u7uTympQyOch+vLInI3Hg+CZe3uMw02tyCYlI6GJPp361PEqf/////////////////m7QAZaNT1CwPJpMRjUi0pAgGMzhlQsbstmKHZkoIYKwuIaqnA46NeZRQdBQINWJILGLh4ssmdhBOkgQgGqYGXTmErmDZHIHCWtHRSIsCFgRiwaBwFEkDo2dcxwGWoNKywIIwzOWpQIGCwLTMTUM+FXLDbNE54PpmlrEWu78MPEZMBFqhWLIlrOVyyyIQ5B6OzxyGNSN2YrKEVEYpBHlK8I84LXs4IfuJy+hcGSv9LKb5WXVeGu0dXUsl/yxyZdegJ35BWfeB5F//uwZPqACXt1Vu5zBIAAAA0gwAAAJ+4NUbm9AEAAADSDAAAAG4rGnOu0MvVzQ0zgQJRWWfT9LDrvWohE4nRQRSwNLZZK8IhlTWYs7Fq63BL2j3ATQneiL/s35aju8Yk/9rUYl9NyKwz3CY05LWHXXW0Ziz9baY3ZpCz2fP6pV//////////////////9S//////////////////pf1kpPRauMsGFRqN9zXfS04hZc0pAE6ovI4gJI01BY1wQc1+PAyPKA1daM96K4yWSIzEQUyQAQx1G823gU2fJcHN4Yek0Z0rm/g57c2Z6QGVKphJAZQIGAiwCLDYEIy0mMyEjHQIAhhjYkY6HmJBZQPGEAxop6YoPg5LM2RhURMLIH2MAETAxIeKQCEmABIcBAoeMqPCYcM8GgQYigaYwAgYAAAmYQCmBASHhekFBaO6CYHR5g4GRC5kAEAjoHFiHIACLODAxB1BCCGDAChiMpEJsZIQYICDMQ0woPJlMIIDFRE0AiM+Ig4WEYYLAReV/pc6rLCwDl00g1iMMBgM47/mXCiT5j5KAA+EkoADh4aEAaJrJX6UBIgB0aRkILOjgIBgJIsRgwoAF+CUBdcmBkEipUxAaCmGBZgYWl8VhpUEAhQBRADgEHE48IDxWFxQwkAa6Xeh9nK/k707WkltXue6GHhWI6bbUzSIS6Db1nWijas3aw+6mit6G6N7PE5GFMEiydEPxJZMJLjPEoMrfInaduHpPD804shp+/////////////////Az9f////////////////7WYqABA+hyYSwq1WrFJNL6dcfl/DREsBaZj7sYGTGP/+8Bk6gANvYNQbndgAAAADSDAAAAmTdNTub2QAAAAP8MAAAAAhmQwaXNh1aGDgOKwEQmVhJumKcKtEx884YLqDHBHhuYos8WCy4BfRMAwslAQwYQPobqkYusChzpUhF1FA4oEBQFz2GQFTLWRxbNHY0FhAQArbBgysRORQxsjYlHIs5TXGcLUmRYDCwQw9kJflbrqQOyqAmXudVdtxoDY5ZeZFpGR72RsUXq4zzTz9vfGIXAzrtk+AHtppXTyhxIaeGIQLWhFA778R6LRh/LUWgikfi84EPU8C3pbQVK7RHZvQK7EnY1bhmQQdP0FqVw9PX5HJ7d17om+Wn+pb8y/0zLIrNsvbFGnguOTBzexpyJVEbN6GMGeT8gmKCIUlyfiE1dtSibtO9Pf////////////////9l3/6hOCRTdDRjJUca02IkiZDIgDFmTD59s8ayRAOqM8KTBBUvwZaKGFB5bkFEpEgmUBplZADh2HzGQxCMvmbhgtJs6BmompUI1CA5bASOi8ulAcHGAhBEoVMchAEqJKPcVar7MQSVlxdZB2CUuWQJPkSJGuVmsNsLZlVg2AW5xhxGzxpUrEk0lgWvRCu5tyMJqt9JKRu0ATEEfGGYu04UgduAlB4NgiHqSmpqZ+IhKHL7p+oRVbyYxyoInJ/5FX6cfCWP23sGxNr8vjMXi8vfSPI+rNJQOFSRpz3Di8q7TzunBj9iLUdqfh6UQ/ahqHH8sSubvyDtiB4bh91oXGZU/8ONNceI8eqRN1jEcsXIzOSqhlr+2csKaCav/////////////////////////////////////YAAiFAYGQYEQAAAAAAA9JeXHWpoUA31uR4fcgDluT2OOWFGLaALBnaFgChRUAoUGkGArxWCAzS3zEWTNBSuigMTYBpOEktRGxwaH0Hl5Uw80deVk7ka66RbzV2Hpm64xYMo3buvHT13dm01ZpH//7sGTQgAmggtT+bwAAG+AJjcAAABPFnVedhgAIYwAn/4AABFl12H3shUtbufd3cetlmuvXO+Jd85NoYl35016dney3zlpr0zM2ts/8/j2f067bNdtXJm21+ufDRc0/S7trZ+f39+u/XJmZ2su1rJmSALoxAAAARwAANSEH0SgIl5cjbJyGfBeXpQesqqmHf2RtxswJcQDeR1MRkbSqoFvQCl3i2Zb1eKiShqZ7wxCUwt0qkgkVuOXoKtW6WmoqGfj1xZxESpZF3mcOOrsRMTxEtnDXSPRkFR+vUUeX/NS85fjM68budcqo+SMkfOvV+fPTbTSE308yipIvdlEWMjcmZc3H+YuXR5EuHmZLRPOtM4s4my6DUq1Iu1lopG1naz1HQpQ5p5EAdIIkkgDgAdaQqGkJSy84Ih8fpASg7///wfCYq7iHZ/rpE0Q/zT1oB43iDFKnD3Ak6qSAFCFZkOINNifRYsuf15YpENQLOP5A8Wp4nBbZ3nlczKrMCIVNVt1U/U2lyqhw4gInDqIkeu0+PRdmlirGu1DCk83rNoc24s51rjqsH5H1tS21Y01KWui6LLqTZ/vKtX7GEsqcO9S0aqTrRbMWR1Jl1Hujrb/9S1e60WcvgCsFUNDAAAEggIi2AAIUCRNBaiGq0cXwV7LP//qv/z4nnLzGVn+ktkQPKkHACtEExDA1QYsGMColIgQiLSk1oFz4dclcr7OMy6Hn+h6/Ru7Lud3JIGiTLq0Oz0VkBKU1uzMkZlKmo9m2dKJDhxxwpNHmz2IvfvTuo+WoKqPe4akxwtBLWbkMWXxvkQSS9Yz7OJ0IPgmd1sxiXvNr//uQZPQABOho1PsGbfgagAndAAABE0mjRewlt6BogyX4ACwU573I2O+9mdlPetj7///dSnTdSDoGh0vlstAeIhLDAArbn2ZAKAHqKrlis6IlH8O4i1///5Yi//Z/rNamqmoiPvZGQAREiIbRPWhSzWZd1SpYrdl1Yyh64YUyX88TzOy5MVhqNv7O1aXHkqps8aCkz5a3Eo1T4YRBVMBBRY0FItSZsZbwSTlHbJFDu/KSSyKImxVaXrlqajVd3O1W8jzW+vLUDZn//6XbovH2b1Ftp5yZyqeZ/b1s5lNVeZyvi2c69vrHrrG91r61xbMWsj2K3K6OX1CALxlKGBsBoAQAMOAAAfUxP/f/rlGl//uV/9X/////02JX6IFNVfhQNdtt8wAAAMLg6O+//VJ24uo4HynNTDUvtGuPuHa5FBYWnNvdY25WL23Vv/+P//r+3b//t//b/+ubnT1OdDQWjhB04AD+vz//+b8/ye4IURtSKEE5+v8/8/8ufJuTyffJov5X/n3n5+/L/RdkoDaBDK3bP2ssLGap3/r/0eaj8vmT//uAZPyABNBnz3sGjfobwAk9AAAAFAmlL+wZ+aB8hGO0EAjQMajsVHX/ze3////r0dDZZW6UdH////////y9aWQz9UMpUAYPChk//5bK3eKjT1B6WJf/orcJfPSIhWRck9yrjvliT/r+SYS6nyzyIiFg6kxBTUUzLjEwMKqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqTEFNRTMuMTAwqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqr/+2Bk5gHSHGjJaQA/mDNryJIEIr5GJZ8OQICjCKaAIcgAAACqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqr/+xBk3Y/wAAB/gAAACAAAD/AAAAEAAAGkAAAAIAAANIAAAASqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqg==")
loop = true
loop_offset = 0.2

[node name="crash_bomb" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_7mixq")
speed_of_crash_bomb = 50000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i2j25")
animation = &"in_air"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.94729e-08, -1)
shape = SubResource("RectangleShape2D_0y88n")

[node name="self_destruct_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="explosion_effect" type="GPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
material = SubResource("CanvasItemMaterial_h6qpw")
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_jks88")
texture = ExtResource("3_hewch")
one_shot = true

[node name="destroy_node_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 2

[node name="in_air" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(-5, 5, 5, 5, 5, -7.66667, -5, -7.66667)

[node name="landed_right" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(2.33333, -1, -0.666667, 2, -0.666667, 6.66667, 0.333333, 8, 6.33333, 8, 8, 6.33333, 8, 0, 7, -1)
disabled = true

[node name="landed_left" type="CollisionPolygon2D" parent="hitbox"]
modulate = Color(0.0705882, 0.890196, 0.713726, 1)
polygon = PackedVector2Array(-8, 0, -8, 5, -5, 8, 0, 8, 2, 6, 2, 1, -1, -2, -6, -2)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(7.94729e-08, -1)
shape = SubResource("RectangleShape2D_a8n7b")
disabled = true

[node name="crash_bomb_landed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4y5te")

[node name="hurt_for_explosion" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMP3_whgf8")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="self_destruct_timer" to="." method="_on_self_destruct_timer_timeout"]
[connection signal="timeout" from="destroy_node_timer" to="." method="_on_destroy_node_timer_timeout"]
